<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recyclerv"
    android:padding="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivfav_avatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_favname"
        style="@style/ItemTextView"
        android:layout_width="290dp"
        android:layout_height="16dp"
        android:fontFamily="@font/katahdin"
        android:text="@string/item_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.27" />

    <Button
        android:id="@+id/btn_to_detail"
        android:layout_width="221dp"
        android:layout_height="35dp"
        android:background="@drawable/border"
        android:backgroundTint="#163832"
        android:text="@string/move_detail"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <ImageView
        android:id="@+id/ivfav_name"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_favname"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <ImageView
        android:id="@+id/ivfav_location"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/ivfav_name"
        app:srcCompat="@drawable/ic_baseline_location_city_24" />

    <ImageView
        android:id="@+id/ivfav_company"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/ivfav_location"
        app:srcCompat="@drawable/ic_baseline_work_24" />

    <TextView
        android:id="@+id/tv_favusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/item_username"
        app:layout_constraintBottom_toBottomOf="@+id/ivfav_name"
        app:layout_constraintStart_toEndOf="@+id/ivfav_name"
        app:layout_constraintTop_toTopOf="@+id/ivfav_name" />

    <TextView
        android:id="@+id/tv_favlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/item_location"
        app:layout_constraintBottom_toBottomOf="@+id/ivfav_location"
        app:layout_constraintStart_toEndOf="@+id/ivfav_location"
        app:layout_constraintTop_toTopOf="@+id/ivfav_location" />

    <TextView
        android:id="@+id/tv_favcompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/item_company"
        app:layout_constraintBottom_toBottomOf="@+id/ivfav_company"
        app:layout_constraintStart_toEndOf="@+id/ivfav_company"
        app:layout_constraintTop_toBottomOf="@+id/ivfav_location" />


</androidx.constraintlayout.widget.ConstraintLayout>
